Adding middleware/other updatest
