# apps/api/openapi.yaml
@@ -12,6 +12,21 @@ servers:
 
 paths:
 
+  /health:
+    get:
+      summary: check API /health
+      responses: 
+        "200":
+          description: Server is running
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  status: 
+                    type: string
+                    example: ok
+                  
   /tasks:
 
     get:
@@ -59,7 +74,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/NewTask"
+                $ref: "#/components/schemas/Task"
 
 
         "400":
@@ -97,6 +112,13 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
+        "400":
+          description: Invalid task id
+          content: 
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
     patch:
       summary: Update a task
       description: Updates field/s of a task
@@ -124,6 +146,13 @@ paths:
               schema: 
                 $ref: "#/components/schemas/Task"
 
+        "400":
+          description: invalid task id or missing fields
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+           
 
         "404":
           description: Task not found
@@ -148,6 +177,13 @@ paths:
       responses:
         "204":
           description: Task deleted succesfully
+
+        "400":
+          description: Invalid task id 
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
 
         "404":
           description: Task not found
@@ -184,21 +220,6 @@ components:
         status:
           type: string
           example: todo
-
-    NewTask:
-      type: object
-      required:
-        - title
-
-      properties:
-        title: 
-          type: string
-          example: Create task API
-
-        status:
-          type: string 
-          example: todo
-
     
     UpdateTask:
       type: object
